fix: Chores & add shadowjar plugin